   0 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.6.0 vs. 2.5.3 

  Implemented requests:

  - Online team projects
  http://sourceforge.net/support/tracker.php?aid=3513384

----------------------------------------------------------------------
 OmegaT 2.5.4
----------------------------------------------------------------------
   4 Enhancements
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.4 vs. 2.5.3

  Implemented requests:

  - Automatic conversion of numbers when inserting fuzzy matches
  http://sourceforge.net/support/tracker.php?aid=1381480

  Other enhancements:

  - The automatic save interval can now be set in Options > Save. 
It is defined in minutes and seconds. If a value lower than 10 seconds
is set, it is reset to 10 seconds.

  - Linux: Enhanced Kaptain script

  - Load translations from sources as default translations
  http://sourceforge.net/support/tracker.php?aid=3524017

  Localisation updates:

  - Italian localisation updated to 2.5.3 (UI)

----------------------------------------------------------------------
 OmegaT 2.5.3
----------------------------------------------------------------------
   3 Enhancements
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.3 vs. 2.5.2 update 2

  Implemented requests:

  - (X)HTML filters: hide content of tags based on attributes
  http://sourceforge.net/support/tracker.php?aid=3513384

  - Capture variables in source filename to target mapping
  http://sourceforge.net/support/tracker.php?aid=3436954

  Other enhancements:

  - The Linux packages (OmegaT_xxx_Linux.tar.bz2 and OmegaT_xxx_Without_JRE.zip) 
have been improved. They now contain an installation script: linux-install.sh 
and a Kaptain script: omegat.kaptn. The OmegaT script in OmegaT_xxx_Without_JRE.zip