@@ -133,13 +133,19 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         }
     }
 
+    // TODO When the form is generated by NetBeans, the line
+    // instances.setModel(new OneFilterTableModel(filter));
+    // is replaced by
+    // instances.setModel(filter);
+    // which doesn't compile. It has to be fixed manually
+
     /**
      * This method is called from within the constructor to initialize the form.
      * WARNING: Do NOT modify this code. The content of this method is always
      * regenerated by the Form Editor.
      */
     // <editor-fold defaultstate="collapsed"
-    // desc=" Generated Code ">//GEN-BEGIN:initComponents
+    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
         java.awt.GridBagConstraints gridBagConstraints;
 
@@ -159,47 +165,41 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         addButton = new javax.swing.JButton();
         hintTextArea = new javax.swing.JTextArea();
 
-        getContentPane().setLayout(new java.awt.GridBagLayout());
-
-        setTitle(OStrings.getString("FILTEREDITOR_Edit_a_single_file_filter"));
-        setResizable(false);
+        setTitle(OStrings.getString("FILTEREDITOR_Edit_a_single_file_filter")); // NOI18N
         addWindowListener(new java.awt.event.WindowAdapter() {
             public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
+        getContentPane().setLayout(new java.awt.GridBagLayout());
 
         buttonPanel.setLayout(new java.awt.FlowLayout(java.awt.FlowLayout.RIGHT));
 
-        org.openide.awt.Mnemonics
-                .setLocalizedText(toDefaultsButton, OStrings.getString("BUTTON_TO_DEFAULTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(toDefaultsButton, OStrings.getString("BUTTON_TO_DEFAULTS")); // NOI18N
         toDefaultsButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 toDefaultsButtonActionPerformed(evt);
             }
         });
-
         buttonPanel.add(toDefaultsButton);
 
         jLabel1.setPreferredSize(new java.awt.Dimension(20, 0));
         buttonPanel.add(jLabel1);
 
-        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK"));
+        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK")); // NOI18N
         okButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 okButtonActionPerformed(evt);
             }
         });
-
         buttonPanel.add(okButton);
 
-        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL"));
+        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL")); // NOI18N
         cancelButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 cancelButtonActionPerformed(evt);
             }
         });
-
         buttonPanel.add(cancelButton);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
@@ -210,8 +210,7 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         gridBagConstraints.insets = new java.awt.Insets(3, 3, 3, 3);
         getContentPane().add(buttonPanel, gridBagConstraints);
 
-        org.openide.awt.Mnemonics.setLocalizedText(fileFormatLabel,
-                OStrings.getString("FILTEREDITOR_File_Format"));
+        org.openide.awt.Mnemonics.setLocalizedText(fileFormatLabel, OStrings.getString("FILTEREDITOR_File_Format")); // NOI18N
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 2;
@@ -234,7 +233,7 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         descTextArea.setEditable(false);
         descTextArea.setFont(new JLabel().getFont());
         descTextArea.setLineWrap(true);
-        descTextArea.setText(OStrings.getString("FILTEREDITOR_DESC"));
+        descTextArea.setText(OStrings.getString("FILTEREDITOR_DESC")); // NOI18N
         descTextArea.setWrapStyleWord(true);
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -260,14 +259,13 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         gridBagConstraints.insets = new java.awt.Insets(2, 2, 2, 2);
         jPanel3.add(instancesScrollPane, gridBagConstraints);
 
-        org.openide.awt.Mnemonics.setLocalizedText(removeButton, OStrings.getString("BUTTON_REMOVE"));
+        org.openide.awt.Mnemonics.setLocalizedText(removeButton, OStrings.getString("BUTTON_REMOVE")); // NOI18N
         removeButton.setEnabled(false);
         removeButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 removeButtonActionPerformed(evt);
             }
         });
-
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 2;
@@ -276,14 +274,13 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         gridBagConstraints.insets = new java.awt.Insets(2, 2, 2, 2);
         jPanel3.add(removeButton, gridBagConstraints);
 
-        org.openide.awt.Mnemonics.setLocalizedText(editButton, OStrings.getString("BUTTON_EDIT"));
+        org.openide.awt.Mnemonics.setLocalizedText(editButton, OStrings.getString("BUTTON_EDIT")); // NOI18N
         editButton.setEnabled(false);
         editButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 editButtonActionPerformed(evt);
             }
         });
-
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 1;
@@ -292,13 +289,12 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         gridBagConstraints.insets = new java.awt.Insets(2, 2, 2, 2);
         jPanel3.add(editButton, gridBagConstraints);
 
-        org.openide.awt.Mnemonics.setLocalizedText(addButton, OStrings.getString("BUTTON_ADD"));
+        org.openide.awt.Mnemonics.setLocalizedText(addButton, OStrings.getString("BUTTON_ADD")); // NOI18N
         addButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 addButtonActionPerformed(evt);
             }
         });
-
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 0;
@@ -332,9 +328,7 @@ public class FilterEditor extends JDialog implements ListSelectionListener {
         getContentPane().add(hintTextArea, gridBagConstraints);
 
         pack();
-    }
-
-    // </editor-fold>//GEN-END:initComponents
+    }// </editor-fold>//GEN-END:initComponents
 
     private void removeButtonActionPerformed(java.awt.event.ActionEvent evt)// GEN-FIRST:event_removeButtonActionPerformed
     {// GEN-HEADEREND:event_removeButtonActionPerformed
